--- a/week2/index.html
+++ b/week2/index.html
@@ -4,38 +4,38 @@
 
     </head>
     <body>
-        <div>
-            <h1>Images</h1>
-            <img src="https://www.ancient-origins.net/sites/default/files/field/image/faerie.jpg" width="200px"/>
+        <div>  <!--block-->
+            <h1>Images</h1> <!--block-->
+            <img src="https://www.ancient-origins.net/sites/default/files/field/image/faerie.jpg" width="200px"/> <!--inline-->
          <img src="https://www.ppt-backgrounds.net/uploads/trippy-space-picture-background.jpeg" width="200px"/>
            <img src="https://www.wallpaperup.com/uploads/wallpapers/2013/12/13/195031/03802fea146c5a15b6d33e3980e1f462-700.jpg" width="200px"/> 
         </div>
         <div>
             <h2>Hyperlinks</h2>
-            <a href="https://www.google.com/"> Go to Google!</a> 
+            <a href="https://www.google.com/"> Go to Google!</a>  <!--inline-->
             <a href="https://identity.bryanuniversity.edu/loginformidentityprovider/Login.aspx?ReturnUrl=/loginformidentityprovider/Default.aspx">Go to Bryan Connect!</a>
         </div>
         <div>
             <h3>P Tag examples</h3>
-            <p>Bryan University is awesome</p>
+            <p>Bryan University is awesome</p> <!--block-->
         </div>
         <div>
             <h4>SPAN</h4>
-            <span>This</span>
+            <span>This</span> <!--inline-->
             <span>is</span>
             <span>Span!</span>
         </div>
         <div>
             <h5>Organized list</h5>
-            <ol>
-                <li>dogs</li>
+            <ol> <!--block-->
+                <li>dogs</li> <1-- block--></1-->
                 <li>cats</li>
                 <li>fish</li>
             </ol>
         </div>
         <div>
             <h6>Unorganized list</h6>
-            <ul>
+            <ul>  <!--block-->
                 <li>cats</li>
                 <li>fish</li>
                 <li>dogs</li>
