--- a/week4/wk4pr1/positioning.html
+++ b/week4/wk4pr1/positioning.html
@@ -22,6 +22,26 @@
 <span class="rainbow3"> ipsum lorem ipsum lorem ipsum lorem ipsum lorum</span>
 
 </div>
+<div>
+    <table style="width:100%">
+        <tbody>
+            <th>Monarch</th>
+            <th>Viceroy</th>
+            <th>Pieridae</th>
+            </tbody>
+            <tr>
+                <td>orange</td>
+                <td>orange</td>
+                <td>white</td>
+            </tr>
+            <tr>
+                <td>black</td>
+                <td>black</td>
+                <td>yellow</td>
+            </tr>
+        </table>
+
+</div>
 
 </body>
 
